# PureDOOM

./: .gitignore  README.md
playdate/: CMakeLists.txt
playdate/Source/: dithering.acorn  pdex.dylib  pdxinfo
playdate/src/: main.c  playdate.c  playdate.h
